<resources>
    <string name="app_name">Hemtenta</string>
    <string name="brodtext"> BIRGERS BYGG (B*B)</string>
    <string name="brodtext2">Vi på Birgers Bygg i Tibro söker en individ som mellan v.21 till v.22 kan spotta sig i näven för att gräva
lite grop.</string>
    <string name="brodtext3">Lön 150/h</string>
    <string name="brodtext4">Arbets tid 5 h, tio minuters kaffe och vatten rast varje timme.</string>
    <string name="brodtext5">Vart? Tibros bygg och gräv</string>
    <string name="brodtext6">Utrustning: Spade och dosa lös</string>




    <string name="brodtext7">Gittans Garn</string>
    <string name="brodtext8">Vi på Gittans Garn (GG) i Mariestad skulle behöva en katt ägande individ för att vara med på vår garn utställning den 35/15 för att locka kunder till vårat stånd samt uppvisa hur kattvänligt
    vårat garn är för katter.</string>
    <string name="brodtext9">Lön 78kr/h</string>

    <string name="brodtext10">Sveriges Största Lekstuga</string>
    <string name="brodtext11">Sveriges största lekstuga i Skövde söker deltagare för en lekstuge övning under en fyra dagars period</string>
    <string name="brodtext12">Lön 10kr/per dag</string>


    <string name="brodtext13">Sista ansökan för jobbansökan till Birgers Bygg är den 71/14 23:59</string>
</resources>